Fix overlapping dot matrix

--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -83,7 +83,7 @@
 
 .dotMatrixMidRight {
   right: 13%;
-  top: 53%;
+  top: 56%;
 }
 
 .dotMatrixBottomLeft {
